making new table Companies

--- a/views/common/navbar.pug
+++ b/views/common/navbar.pug
@@ -8,7 +8,7 @@ mixin navbar(user)
         li.nav-item
           a.nav-link(href='/') Home
         li.nav-item
-          a.nav-lin(href='/login') Login
+          a.nav-lin(href='/user') User
     .navbar-right
       if user
         span.navbar-text Welcome #{user.email}
